--- a/angular.json
+++ b/angular.json
@@ -10,8 +10,6 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true,
-          "inlineStyle": true,
           "style": "scss"
         }
       },
@@ -26,12 +24,14 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+		"src/assets"
               {
                 "glob": "**/*",
                 "input": "public"
               }
             ],
             "styles": [
+		"node_modules/normalize.css/normalize.css",
               "src/styles.scss"
             ]
           },
